--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .login {
+            width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        input[type="submit"] {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <h1>My first git repo</h1>
-    <h2>hello this my second commit</h2>
+    <form action="" class="login">
+        <input type="text" name="username" id="username" placeholder="Enter your username">
+        <input type="password" name="password" id="password" placeholder="Enter your password">
+        <input type="submit" value="Login">
+    </form>
 </body>
 </html>
