--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 <body>
     <form action="" class="login">
+        <img src="image/penguin.png" style=" height: 100px; width: 100px;" ="">
         <input type="text" name="username" id="username" placeholder="Enter your username">
         <input type="password" name="password" id="password" placeholder="Enter your password">
         <input type="submit" value="Login">
